--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         "lint": "eslint ."
     },
     "dependencies": {
+        "@mantine/core": "^7.13.1",
+        "@mantine/hooks": "^7.13.1",
+        "@tabler/core": "^1.0.0-beta21",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "vx-front": "https://github.com/vixen-shell/vx-front-library-package.git"
@@ -22,6 +25,9 @@
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
         "eslint-plugin-react-refresh": "^0.4.9",
         "globals": "^15.9.0",
+        "postcss": "^8.4.47",
+        "postcss-preset-mantine": "^1.17.0",
+        "postcss-simple-vars": "^7.0.1",
         "vite": "^5.4.1"
     }
 }
