--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "vx-front",
     "private": true,
-    "version": "0.0.0",
+    "version": "1.0.0-beta.1",
     "type": "module",
     "scripts": {
         "build": "vite build",
