--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
         "lint": "eslint ."
     },
     "dependencies": {
-        "@mantine/core": "^7.13.4",
-        "@mantine/hooks": "^7.13.4",
+        "@mantine/core": "^7.13.5",
+        "@mantine/dates": "^7.13.5",
+        "@mantine/hooks": "^7.13.5",
+        "dayjs": "^1.11.13",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "vx-front": "https://github.com/vixen-shell/vx-front-library-package.git"
